--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
  }
 .body{
  
-    background:url(https:wallpapercave.com/wp/wp2409705.jpg);
+    background:url("../img/wp2409705.jpg");
     min-height: 100vh;
     background-size: 100vw 100vh;
     background-repeat: no-repeat;
@@ -17,7 +17,7 @@
    position: absolute;
    color: rgb(28, 95, 34);
    border: solid black;
-   background-color: rgb(163, 216, 112);
+   background-color: #d9e0b5;
    padding: 10px;
    top: 6px;
    right: 200px;
@@ -27,7 +27,7 @@
  
  #board{
     
-    background: rgb(224, 232, 208);
+    background: #d9e0b5;
     width: 90vmin;
     height: 92vmin;
     border: 3px solid rgb(18, 69, 29);
@@ -41,6 +41,7 @@
    
    
    }
+
 
  h1 {
             
